--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "license": "MIT",
   "dependencies": {
     "robotois-led": "^1.0.6",
-    "robotois-rgb-leds": "^1.0.8",
+    "robotois-rgb-leds": "^1.0.8"
   }
 }
