--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "manduks",
   "license": "MIT",
   "dependencies": {
+    "robotois-distance-sensor": "^1.0.3",
     "robotois-led": "^1.0.6",
-    "robotois-rgb-leds": "^1.0.8"
+    "robotois-rgb-leds": "^1.0.8",
+    "sleep": "^5.2.3"
   }
 }
